--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
+  "name": "@jkli/cms",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "private": true,
+  "main": "resources/js/index.ts",
   "scripts": {
     "dev": "npm run development",
     "development": "mix",
