--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^9.34"
+        "illuminate/support": "^9.34",
+        "inertiajs/inertia-laravel": "^0.6.4"
     },
     "autoload": {
         "psr-4": {
