--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "php": "^8.1",
         "illuminate/support": "^9.34",
-        "inertiajs/inertia-laravel": "^0.6.4"
+        "inertiajs/inertia-laravel": "^0.6.4",
+        "staudenmeir/laravel-cte": "^1.6"
     },
     "autoload": {
         "psr-4": {
