--- a/package.json
+++ b/package.json
@@ -16,23 +16,33 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "workspaces": [
+    "../../projects/react-finder/packages/react-finder"
+  ],
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-react": "^7.18.6",
-    "@mantine/hooks": "^5.7.2",
-    "@mantine/modals": "^5.7.2",
-    "@tabler/icons": "^1.111.0",
+    "@emotion/react": "^11.10.5",
     "@inertiajs/inertia": "^0.11.1",
     "@inertiajs/inertia-react": "^0.8.1",
     "@inertiajs/progress": "^0.2.7",
+    "@jkli/react-finder": "^0.3.0",
     "@mantine/core": "^5.7.2",
-    "react-dom": "^18.2.0"
+    "@mantine/hooks": "^5.7.2",
+    "@reduxjs/toolkit": "^1.9.0",
+    "@tabler/icons": "^1.111.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/node": "^18.11.0",
     "@types/react": "^18.0.21",
+    "@types/react-redux": "^7.1.24",
     "laravel-mix": "^6.0.49",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
