--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "workspaces": [
     "../../projects/react-finder/packages/react-finder"
   ],
+  "exports": {
+    ".": "./resources/js/index.ts",
+    "./vite": "./resources/js/vitePlugin.js"
+  },
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-react": "^7.18.6",
@@ -34,12 +38,15 @@
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@types/node": "^18.11.0",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.21",
     "@types/react-redux": "^7.1.24",
+    "@vitejs/plugin-react": "^3.0.1",
     "laravel-mix": "^6.0.49",
+    "laravel-vite-plugin": "^0.7.3",
     "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "vite": "^4.0.4"
   },
   "peerDependencies": {
     "react": "^18.2.0",
