--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "php": "^8.1",
         "illuminate/support": "^9.34",
         "inertiajs/inertia-laravel": "^0.6.4",
+        "staudenmeir/laravel-adjacency-list": "^1.12",
         "staudenmeir/laravel-cte": "^1.6"
     },
     "autoload": {
