--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@tabler/icons": "^1.111.0",
     "axios": "^1.2.2",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
