--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.10.5",
-    "@inertiajs/inertia": "^0.11.1",
-    "@inertiajs/inertia-react": "^0.8.1",
-    "@inertiajs/progress": "^0.2.7",
+    "@inertiajs/react": "^1.0.0",
     "@jkli/react-finder": "^0.3.0",
     "@mantine/core": "^5.7.2",
     "@mantine/form": "^5.10.0",
