--- a/package.json
+++ b/package.json
@@ -3,33 +3,26 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "main": "resources/js/index.ts",
   "scripts": {
-    "dev": "npm run development",
-    "development": "mix",
-    "watch": "mix watch",
-    "watch-poll": "mix watch -- --watch-options-poll=1000",
-    "hot": "mix watch --hot",
-    "prod": "npm run production",
-    "production": "mix --production"
+    "watch": "tsc-watch",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "workspaces": [
-    "../../projects/react-finder/packages/react-finder"
-  ],
   "exports": {
-    ".": "./resources/js/exports.ts",
-    "./cms": "./resources/js/exportsCms.ts",
+    ".": "./dist/exports.js",
+    "./cms": "./dist/exportsCms.js",
     "./vite": "./resources/js/vitePlugin.js"
   },
+  "main": "dist/exports.js",
+  "types": "dist/exports.d.ts",
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.10.5",
     "@inertiajs/react": "^1.0.0",
-    "@jkli/react-finder": "^0.3.0",
+    "@jkli/react-finder": "^0.4.0",
     "@mantine/core": "^5.7.2",
     "@mantine/form": "^5.10.0",
     "@mantine/hooks": "^5.7.2",
@@ -43,11 +36,13 @@
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.2.5",
     "@types/react-redux": "^7.1.24",
     "@vitejs/plugin-react": "^3.0.1",
     "laravel-mix": "^6.0.49",
     "laravel-vite-plugin": "^0.7.3",
     "ts-loader": "^9.4.1",
+    "tsc-watch": "^6.0.4",
     "typescript": "^4.8.4",
     "vite": "^4.0.4"
   },
