--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@emotion/react": "^11.10.5",
     "@inertiajs/react": "^1.0.0",
     "@jkli/react-finder": "^0.4.0",
-    "@mantine/core": "^5.7.2",
-    "@mantine/form": "^5.10.0",
-    "@mantine/hooks": "^5.7.2",
-    "@mantine/modals": "^5.10.0",
+    "@mantine/core": "^6.0.15",
+    "@mantine/form": "^6.0.15",
+    "@mantine/hooks": "^6.0.15",
+    "@mantine/modals": "^6.0.15",
+    "@mantine/spotlight": "^6.0.15",
     "@reduxjs/toolkit": "^1.9.1",
     "@tabler/icons": "^1.111.0",
     "axios": "^1.2.2",
