--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mantine/hooks": "^6.0.15",
     "@mantine/modals": "^6.0.15",
     "@mantine/spotlight": "^6.0.15",
+    "@minoru/react-dnd-treeview": "^3.4.4",
     "@reduxjs/toolkit": "^1.9.1",
     "@tabler/icons": "^1.111.0",
     "axios": "^1.2.2",
