--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "private": true,
   "scripts": {
-    "watch": "tsc-watch",
-    "build": "tsc"
+    "watch": "tsc-watch & tscp -w",
+    "build": "tsc && tscp"
   },
   "keywords": [],
   "author": "",
@@ -23,15 +23,16 @@
     "@emotion/react": "^11.10.5",
     "@inertiajs/react": "^1.0.0",
     "@jkli/react-finder": "^0.4.0",
-    "@mantine/core": "^6.0.15",
-    "@mantine/form": "^6.0.15",
-    "@mantine/hooks": "^6.0.15",
-    "@mantine/modals": "^6.0.15",
-    "@mantine/spotlight": "^6.0.15",
+    "@mantine/core": "^7.0",
+    "@mantine/form": "^7.0",
+    "@mantine/hooks": "^7.0",
+    "@mantine/modals": "^7.0",
+    "@mantine/spotlight": "^7.0",
     "@minoru/react-dnd-treeview": "^3.4.4",
     "@reduxjs/toolkit": "^1.9.1",
     "@tabler/icons": "^1.111.0",
     "axios": "^1.2.2",
+    "clsx": "^2.0.0",
     "react-redux": "^8.0.5",
     "uuid": "^9.0.0"
   },
@@ -46,6 +47,7 @@
     "ts-loader": "^9.4.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^4.8.4",
+    "typescript-cp": "^0.1.9",
     "vite": "^4.0.4"
   },
   "peerDependencies": {
